# MoreGoodies

./: .gitignore  CMakeLists.txt  MoreGoodies.code-workspace
06.LiteralsAndConstants/constinit/: main.cpp
Abstract/: CMakeLists.txt
Abstract/src/: Abstract.cpp
Accounts/: CMakeLists.txt
Accounts/include/: Account.h  Checking.h  Savings.h  Transaction.h
Accounts/src/: Account.cpp  Checking.cpp  Savings.cpp  Source.cpp  Transaction.cpp  main.cpp
Algorithms/: CMakeLists.txt
Algorithms/src/: Algorith_Part1.cpp  Algorith_Part2.cpp
Assigement/: CMakelists.txt
Assigement/src/: main.cpp
ClassTemplates/: CMakeLists.txt
ClassTemplates/src/: Explicite.cpp  PartialSpecial.cpp  main.cpp
Containers/: CMakeLists.txt
Containers/inc/: Integer.h
Containers/src/: Integer.cpp  change_one.cpp
DataConvertion/OverUnderflow/: CMakeLists.txt  main.cpp
Enum/: CMakeCache.txt  Main  Makefile  cmake_install.cmake  compile_commands.json
Enum/src/: main.cpp
ExceptionHandling/: CMakeLists.txt
ExceptionHandling/src/: ExHandlingII.cpp  NoException.cpp  main.cpp
FileInOutput/: CMakeLists.txt
FileInOutput/src/: Copy.cpp  FileIO.cpp  FileIOCopy.cpp  FileIOPartIV.cpp  FileIO_Binary.cpp  FileLibrary.cpp  main.cpp
FlowControle/IfWithInitializer/: CMakeLists.txt  main.cpp
FunctionTemplate/TemplateByReference/: CMakeLists.txt  main.cpp
FunctionTemplate/TemplateDeduction/: CMakeLists.txt
FunctionTemplate/TryOutFunctions/: CMakeLists.txt  main.cpp
HeadFirstPattern/CommandPattern/: CMakeLists.txt
HeadFirstPattern/CommandPattern/inc/: Commands.h  GarageDoor.h  Light.h  RemoteControle.h  Stereo.h  interface.h
HeadFirstPattern/CommandPattern/src/: CommandPattern.cpp  RemoteControle.cpp
HeadFirstPattern/Duck/: CMakeLists.txt
HeadFirstPattern/Duck/inc/: DecoyDuck.h  IFly.h  duck.h
HeadFirstPattern/Duck/src/: duck.cpp
HeadFirstPattern/DuckBehavior/: CMakeLists.txt
HeadFirstPattern/DuckBehavior/inc/: Duck.h  IFly.h  IQuack.h
HeadFirstPattern/DuckBehavior/src/: Duck.cpp  IFly.cpp  IQuack.cpp
HeadFirstPattern/FactoryPattern/: CMakeLists.txt
HeadFirstPattern/FactoryPattern/inc/: ChicagoStyle.h  ChicagoStyleCheesePizza.h  ChicagoStylePepperoniPizza.h  FactoryStyle.h  NYStyle.h  Pizza.h  PizzaStore.h
HeadFirstPattern/FactoryPattern/src/: main.cpp
HeadFirstPattern/FactoryPatternAbstract/: CMakeLists.txt
HeadFirstPattern/FactoryPatternAbstract/inc/: ChicagoStyle.h  NYStyle.h  NYStyleCheesePizza.h  Pizza.h  PizzaStore.h
HeadFirstPattern/FactoryPatternAbstract/inc/IngredientFactory/: ChicagoPizzaIngredientFactory.h  Ingredients.h  NYPizzaIngredientFactory.h  PizzaIngredientFactory.h
HeadFirstPattern/FactoryPatternAbstract/inc/PizzaTypes/: CheesePizza.h  ClamPizza.h  PepperoniPizza.h
HeadFirstPattern/FactoryPatternAbstract/src/: main.cpp
HeadFirstPattern/Observer/: CMakeLists.txt
HeadFirstPattern/Observer/inc/: DisplayElement.h  Observer.h  Subject.h
HeadFirstPattern/Observer/src/: WeatherStation.cpp
HeadFirstPattern/ObserverPull/: .$Observer.drawio.bkp  CMakeLists.txt  Observer.drawio
HeadFirstPattern/ObserverPull/inc/: DisplayElement.h  Observer.h  Subject.h
HeadFirstPattern/ObserverPull/src/: WeatherStationPull.cpp
HeadFirstPattern/SingletonPattern/: CMakeLists.txt
HeadFirstPattern/SingletonPattern/Schokoladenfabrik/: CMakeLists.txt
HeadFirstPattern/SingletonPattern/Schokoladenfabrik/inc/: Schokoladenfabrik.h
HeadFirstPattern/SingletonPattern/Schokoladenfabrik/src/: Schokoladenfabrik.cpp  main.cpp
HeadFirstPattern/SingletonPattern/inc/: main.h  singleton.h
HeadFirstPattern/SingletonPattern/src/: main.cpp
HeadFirstPattern/Starbuzz/: CMakelists.txt
HeadFirstPattern/Starbuzz/inc/: Beverage.cpp  Beverage.h  StarrbuzzCoffee.h
HeadFirstPattern/Starbuzz/src/: StarrbuzzCoffee.cpp
HeadFirstPattern/StarbuzzDecorator/: CMakelists.txt
HeadFirstPattern/StarbuzzDecorator/inc/: Beverages.h  Condiment.h  IBeverage.h  ICondiments.h
HeadFirstPattern/StarbuzzDecorator/src/: Condiment.cpp  StarrbuzzCoffeeDecorator.cpp
Initializer/: CMakeLists.txt
Initializer/src/: main.cpp
LambdaExpressions/: CMakeLists.txt
LambdaExpressions/src/: GeneralizedLambda.cpp  LambdaPart_2.cpp  LambdaPart_3.cpp  lambda.cpp  main.cpp
Literals/: CMakeLists.txt
Literals/src/: main.cpp
LiteralsAndConstants/constinit/: CMakeLists.txt  main.cpp
MultiInheritance/: CMakeLists.txt
MultiInheritance/src/: MultiInheritance.cpp
OperatorOverloading/: CMakeLists.txt
OperatorOverloading/include/: Integer.h
OperatorOverloading/src/: Integer.cpp  main.cpp
StrStream/: CMakeLists.txt
StrStream/src/: main.cpp
Strings/: CMakeCache.txt  CMakeLists.txt  Main  Makefile  cmake_install.cmake  compile_commands.json
Strings/src/: main.cpp
Templates/: CMakeLists.txt
Templates/include/: Integer.h
Templates/src/: Integer.cpp  NonType.cpp  PerfectForwarding.cpp  Source.cpp  Variadic.cpp  gsl_span.cpp  main.cpp
TestFile/: CMakeLists.txt
TestFile/Src/: main.cpp
Thread/: CMakeLists.txt
Thread/src/: ReturnValueThread.cpp  ThreadCreate.cpp  ThreadSynchronMutex.cpp  concurrency.cpp
TypedefAlias/: CMakeLists.txt
TypedefAlias/Test/: test_main.cpp
TypedefAlias/src/: TypeTraits.cpp  main.cpp
UML/: .$Ducks.drawio.bkp  Ducks.drawio
Union/: CMakeLists.txt
Union/src/: main.cpp
VariablesDataTypes/NumberSystem/: CMakeLists.txt  main.cpp
Vector/: CMakeLists.txt
Vector/src/: main.cpp
std_Library/: CMakeLists.txt
std_Library/src/: array_vector.cpp  bind.cpp  deque.cpp  function.cpp  hash.cpp  list_multiList.cpp  map_Multimap.cpp  optional.cpp  set_multiset.cpp  unordert_map.cpp  unordert_set.cpp  variant.cpp
