cmake_minimum_required(VERSION 3.25.0)
project(stl VERSION 0.1.0 LANGUAGES C CXX)

include(CTest)
enable_testing()

add_subdirectory(VariablesDataTypes/NumberSystem)
add_subdirectory(LiteralsAndConstants/constinit)
add_subdirectory(DataConvertion/OverUnderflow)
add_subdirectory(FlowControle/IfWithInitializer)
add_subdirectory(FunctionTemplate/TryOutFunctions)
add_subdirectory(FunctionTemplate/TemplateDeduction)
#add_subdirectory(Accounts)
#add_subdirectory(MultiInheritance)
#add_subdirectory(Abstract)
#add_subdirectory(ExceptionHandling)
#add_subdirectory(FileInOutput)
#add_subdirectory(TestFile)
#add_subdirectory(Templates)
#add_subdirectory(OperatorOverloading)
#add_subdirectory(ClassTemplates)
#add_subdirectory(TypedefAlias)
#add_subdirectory(LambdaExpressions)
#add_subdirectory(std_Library)
#add_subdirectory(Algorithms)
#add_subdirectory(Containers)
#add_subdirectory(thread)
#
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)